# idps

./: .gitignore  CLAUDE.md  CMakeLists.txt  MEMORY.md  README.md  rules.txt
.github/: copilot-instructions.md
bpf/: CMakeLists.txt  bpf_tracing.h  nids_bpf.c  nids_bpf_attack.c  nids_bpf_defrag.c  nids_bpf_events.c  nids_bpf_flow.c  nids_bpf_helpers.c  nids_bpf_internal.h  nids_bpf_main.c  nids_bpf_parser.c  nids_bpf_proto.c  nids_common.h  nids_trace.c
deploy/: README.md  nids.conf  nids.service
docs/: D-01_struct_layout.md  D-02_map_capacity.md  D-03_ebpf_verifier.md  D-04_af_xdp_umem.md  D-05_rule_format.md  D-06_xdp_return_codes.md  D-07_fragment_reassembly.md  D-08_performance_tuning.md  D-09_sec_event_json.md  D-10_log_levels.md  D-11_email_protocol_detection.md  D-12_dns_query_extraction.md  D-14_tls_certificate_inspection.md  NIDS_SEPC.md  arch.md
idps/: Makefile
idps/bpf/: idps.bpf.c
idps/include/: idps.h
idps/src/: loader.c
src/: CMakeLists.txt  main.cpp
src/app/: nids_app.cpp  nids_app.h
src/core/: logger.cpp  logger.h  packet.h  pipeline.h  pool.hpp  spsc_queue.hpp  stage.h
src/ebpf/: ebpf_loader.cpp  ebpf_loader.h  nids_bpf.skel.h  nids_trace.skel.h  ringbuf_reader.cpp  ringbuf_reader.h  trace_reader.cpp  trace_reader.h
src/ipc/: event_queue.cpp  event_queue.hpp  sec_event.h
src/metrics/: metrics_registry.cpp  metrics_registry.h  prometheus_server.cpp  prometheus_server.h
src/nic/: af_packet_nic.cpp  af_packet_nic.h  ebpf_nic.cpp  ebpf_nic.h  mock_nic.h  nic_interface.h
src/rules/: rule_parser.cpp  rule_parser.h
src/stages/: decode_stage.cpp  decode_stage.h  detection_stage.cpp  detection_stage.h  event_stage.cpp  event_stage.h  matching_stage.cpp  matching_stage.h  net_headers.h  preprocess_stage.cpp  preprocess_stage.h
src/threads/: capture_thread.cpp  capture_thread.h  comm_thread.cpp  comm_thread.h  processing_thread.cpp  processing_thread.h
src/utils/: bmh_search.h
src/xdp/: af_xdp.cpp  af_xdp.h
tests/: CMakeLists.txt  ddos.rules  fuzz_rule_parser.cpp  test_af_xdp.cpp  test_af_xdp_frame_recycle.cpp  test_bmh_performance.cpp  test_bmh_search.cpp  test_bpf_helpers.cpp  test_bpf_map_verification.cpp  test_ddos_module.cpp  test_ddos_threshold.cpp  test_dns_amplification.cpp  test_dns_query.cpp  test_ebpf_loader.cpp  test_email_protocols.cpp  test_frag_timeout.cpp  test_icmp_flood_threshold.cpp  test_integration.cpp  test_ipv4_ipv6_dual_stack.cpp  test_ipv6_fragment.cpp  test_logger.cpp  test_pipeline.cpp  test_pool.cpp  test_queue.cpp  test_ringbuf_full.cpp  test_rule_concurrent.cpp  test_rule_index_consistency.cpp  test_rule_parser.cpp  test_rule_parsing_boundaries.cpp  test_stages.cpp  test_tcp_flags.cpp  test_tls_cert.cpp  test_tls_clienthello.cpp
